<resources>
    <string name="app_name">Project</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Recent</string>
    <string name="tab_text_3">Messages</string>
    <string name="tab_text_4">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign__in">Sign_In</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Register">Register</string>
    <string name="SignIn">Sign In</string>
    <string name="Email"> Email</string>
    <string name="Password">Password</string>
    <string name="CreateAccount"> Create Account</string>
    <string name="CreateMessage"> Click here to Create Account</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="ForgotButton">Forgot Password</string>
    <string name="logoutButton">Log Out</string>
    <string name="add_post">Add Post</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="enter_your_post_here">Enter Your Post Here!</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Title</string>
    <string name="attachment_summary_off">Attachment Summary Off</string>
    <string name="attachment_summary_on">attachment_summary_on</string>
    <string name="attachment_title">string/attachment_title</string>
    <string name="night">night</string>
</resources>
